--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minha Imagem</title>
+</head>
+<body>
+    <h1>Bem-vindo!</h1>
+    <p>Abaixo está uma imagem:</p>
+    <img src="caminho-da-imagem.jpg" alt="Descrição da imagem" width="300">
+</body>
+</html>
